# emicon

./: .gitignore  Cargo.toml  Setup.ps1  Setup.sh  build.rs
src/: hibp.rs  main.rs  mosint.rs  rate_limiter.rs  shared.rs
ui/: Breach.slint  Form.slint  MainWindow.slint  Menu.slint  Overlay.slint  Password.slint  Paste.slint  main-window.slint  themes.slint
