[package]
name = "emicon"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.142"
directories = "6.0.0"
once_cell = "1.21.3"
thiserror = "2.0.16"
urlencoding = "2.1"
chrono = "0.4.41"
slint = "1.12.1"
sha1 = "0.10.6"

[build-dependencies]
slint-build = "1.12.1"
